welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:10: error: not found: value reucle
  Brosse() ; avance() ; avance() ; Brosse() ; recule() ; gauche() ; avance() ; Brosse() ; recule() ; reucle() ; Brosse() 
                                                                                                     ^FlowerPot:17: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^